@@ -83,5 +83,6 @@ struct artifact {
 #define ENLIGHTENING	(LAST_PROP+8)
 #define CREATE_AMMO	(LAST_PROP+9)
 #define PHASING		(LAST_PROP+10)
+#define SMOKE_CLOUD	(LAST_PROP+11)
 
 #endif /* ARTIFACT_H */
