@@ -363,6 +363,8 @@ tactics(mtmp)
 				     doname(otmp) : distant_name(otmp, doname));
 			    obj_extract_self(otmp);
 			    (void) mpickobj(mtmp, otmp);
+			/* better wear the artifact, esp. if it's a shield */
+			    m_dowear(mtmp, FALSE);
 			    return(1);
 			} else return(0);
 		    } else {
